src/catalog/materialization/snapshots/estuary__catalog__materialization__test__sql_ddl_is_generated_for_sqlite_materialization.snap
---
source: src/catalog/materialization/mod.rs
expression: actual
---
- - 1
  - test_pg_materialization
  - 1
  - sqlite
  - "file:///tmp/test/sqlite/materialization"
  - sqlite_test_table
  - comments:
      Block:
        left: /*
        right: "*/"
    identifierMaxLength: ~
    identifierQuotes:
      left: "\""
      right: "\""
    notNull: NOT NULL
    nullable: ""
    type: sqlite
    typeMappings:
      array:
        ddl:
          plain: TEXT
        insert_template: "?"
        max_supported_length: ~
      boolean:
        ddl:
          plain: BOOLEAN
        insert_template: "?"
        max_supported_length: ~
      integer:
        ddl:
          plain: INTEGER
        insert_template: "?"
        max_supported_length: ~
      number:
        ddl:
          plain: REAL
        insert_template: "?"
        max_supported_length: ~
      object:
        ddl:
          plain: TEXT
        insert_template: "?"
        max_supported_length: ~
      string:
        default_type:
          ddl:
            plain: TEXT
          insert_template: "?"
          max_supported_length: ~
      string_base64:
        default_type:
          ddl:
            plain: BLOB
          insert_template: "?"
          max_supported_length: ~
  - "/* Materialization 'test_pg_materialization' for Estuary collection 'testCollection', intended for sqlite */\nCREATE TABLE \"sqlite_test_table\" IF NOT EXISTS (\n\t/* user provided projection of JSON at: /a (partition key) with inferred types: [integer] */\n\t\"field_a\" INTEGER NOT NULL,\n\n\t/* user provided projection of JSON at: /b (partition key) with inferred types: [string] */\n\t\"field_b\" TEXT,\n\n\t/* auto-generated projection of JSON at: /c with inferred types: [null, string] */\n\t\"field_c\" BLOB,\n\n\t/* auto-generated projection of JSON at: /d with inferred types: [null, object] */\n\t\"field_d\" TEXT,\n\n\t/* auto-generated projection of JSON at: /e with inferred types: [null, number] */\n\t\"field_e\" REAL,\n\n\tPRIMARY KEY(\"field_a\", \"field_b\")\n);"
